@@ -1,3 +1,9 @@
+2008-12-09  Jonathan Pryor  <jpryor@novell.com>
+
+	* EnumerableValueReaderTest.cs, TextValueReaderTest.cs: Ensure that an
+	  InvalidOperationException is thrown when we read past the end of the
+	  Reader.
+
 2008-12-08  Jonathan Pryor  <jpryor@novell.com>
 
 	* DelegateTest.cs: Add tests for .Timings().
